# torin

./: .torin.toml  Cargo.toml  README.md  jf.toml
crates/localtrace/: Cargo.toml
crates/localtrace/src/: lib.rs  macros.rs
e2e/: sample.rs  sample.rs.expected
src/: action.rs  config.rs  convert.rs  main.rs  operation.rs  prelude.rs
src/config/: cli.rs  context.rs  manifest.rs  mod.rs
src/config/annotation/: command.rs  mod.rs  params.rs  target.rs  trigger.rs
src/e2e/: sample.rs  sample.rs.expected
src/engine/: action.rs  context.rs  mod.rs  mode.rs  plan.rs  status.rs
src/engine/file/: diff.rs  lines.rs  mod.rs
src/engine/file/testdata/: sample_0.txt  sample_1.txt  sample_2.txt
src/ext/: lines.rs  mod.rs  sized_split.rs
src/model/: command.rs  cutify.rs  date.rs  feature.rs  mod.rs  rule.rs  target.rs  trigger.rs
