[package]
name = "torin"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
once_cell = "1.21.3"
regex = "1.11.1"

localtrace = { path = "crates/localtrace" }


[workspace]
members = ["crates/localtrace"]
